app - lists and tasks
- see lists
- see tasks
- toggle tasks
- add task

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,6 +68,9 @@ body {
 .f18 {
 	font-size: 18px;
 }
+.f20 {
+	font-size: 20px;
+}
 .f24 {
 	font-size: 24px;
 }
@@ -83,7 +86,8 @@ span,
 a,
 a:visited,
 input,
-button {
+button,
+label {
 	color: var(--text-prim-color);
 }
 
