--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,6 +39,7 @@ a:hover {
 body {
 	width: 100vw;
 	height: 100vh;
+	overflow: hidden;
 }
 
 /** -------------------------------- global -------------------------------- */
